# mp

./: .gitignore  CMakeLists.txt  Dependencies.cmake  README
include/mp/: co_moving_detection.hpp  defs.hpp  feature_computation.hpp  following_detection.hpp  following_graph.hpp  ground_truth.hpp  location_data.hpp  metrics.hpp  page_rank.hpp  parser.hpp  serialization.hpp  signal_data.hpp  tracing_data.hpp
include/mp/tools/: array_2d.hpp  array_view.hpp  iter.hpp  strided_array_view.hpp
src/: CMakeLists.txt
src/cmd/: CMakeLists.txt
src/cmd/common/: binary_classifier.hpp  classifier_file.hpp  eval_classifier_file.hpp  eval_follower_file.hpp  eval_leader_file.hpp  feature_file.hpp  file_formats.hpp  follower_file.hpp  ground_truth_file.hpp  leader_file.hpp  parser.cpp  parser.hpp  scene_manifest.cpp  scene_manifest.hpp  util.hpp
src/cmd/detect-followers/: main.cpp
src/cmd/detect-leaders/: main.cpp
src/cmd/dtw-path-example/: main.cpp
src/cmd/evaluate-classifier/: main.cpp
src/cmd/evaluate-followers/: main.cpp
src/cmd/evaluate-leaders/: main.cpp
src/cmd/following-graph/: main.cpp
src/cmd/group-eval/: main.cpp
src/cmd/produce-features/: main.cpp
src/cmd/produce-ground-truth/: main.cpp
src/cmd/train-classifier/: main.cpp
src/mp/: CMakeLists.txt  co_moving_detection.cpp  feature_computation.cpp  following_detection.cpp  following_graph.cpp  ground_truth.cpp  metrics.cpp  parser.cpp  signal_data.cpp  tracing_data.cpp
test/: CMakeLists.txt  array_2d.cpp  following_detection.cpp  following_graph.cpp  ground_truth.cpp  metrics.cpp  parser.cpp  serialization.cpp  signal_data.cpp  tracing_data.cpp
